[gd_scene load_steps=8 format=2]

[ext_resource path="res://bg2.png" type="Texture" id=1]
[ext_resource path="res://GHAttack.tres" type="Theme" id=2]
[ext_resource path="res://GHBigFont.tres" type="DynamicFont" id=3]
[ext_resource path="res://GHFlatBox.tres" type="StyleBox" id=4]
[ext_resource path="res://ResetWindow.gd" type="Script" id=6]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[node name="ResetWindow" type="PanelContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource( 2 )
custom_styles/panel = ExtResource( 4 )
script = ExtResource( 6 )

[node name="ResetBack" type="TextureRect" parent="."]
margin_left = 4.0
margin_top = 4.0
margin_right = 326.0
margin_bottom = 454.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 2

[node name="Margins" type="MarginContainer" parent="."]
margin_left = 4.0
margin_top = 4.0
margin_right = 326.0
margin_bottom = 454.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="ResetContainer" type="VBoxContainer" parent="Margins"]
margin_left = 10.0
margin_top = 10.0
margin_right = 312.0
margin_bottom = 440.0

[node name="ResetIcon" type="GridContainer" parent="Margins/ResetContainer"]
margin_right = 302.0
size_flags_horizontal = 3
size_flags_vertical = 4
custom_constants/vseparation = 10

[node name="ResetQuestion" type="Label" parent="Margins/ResetContainer"]
margin_top = 4.0
margin_right = 302.0
margin_bottom = 322.0
custom_fonts/font = ExtResource( 3 )
text = "Reset deck
to starting
cards?"
align = 1

[node name="ResetButtons" type="HBoxContainer" parent="Margins/ResetContainer"]
margin_top = 326.0
margin_right = 302.0
margin_bottom = 430.0

[node name="YesButton" type="Button" parent="Margins/ResetContainer/ResetButtons"]
margin_right = 149.0
margin_bottom = 104.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
custom_styles/normal = SubResource( 4 )
text = "Yes"

[node name="NoButton" type="Button" parent="Margins/ResetContainer/ResetButtons"]
margin_left = 153.0
margin_right = 302.0
margin_bottom = 104.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
custom_styles/normal = SubResource( 5 )
text = "No"

[connection signal="pressed" from="Margins/ResetContainer/ResetButtons/YesButton" to="." method="_on_YesButton_pressed"]
[connection signal="pressed" from="Margins/ResetContainer/ResetButtons/NoButton" to="." method="_on_NoButton_pressed"]
